deprecated Double and Integer constructors to valueOf